--- a/Neo Zen V1.0.0/NeoZen/Theme/Nav-Bar/Nav-Bar.css
+++ b/Neo Zen V1.0.0/NeoZen/Theme/Nav-Bar/Nav-Bar.css
@@ -1,18 +1,23 @@
-:root:not([zen-single-toolbar="true"]) {
-    #zen-appcontent-navbar-container{            
+:root:not([zen-single-toolbar="true"]):not([zen-compact-mode="true"]) {
+    #zen-appcontent-navbar-container {
         & #nav-bar {
             padding-top: 2px !important;
             height: 50px !important;
             max-height: 50px !important;
-            
+
             align-content: center !important;
         }
     }
-    @media not (-moz-bool-pref: "zen.view.compact.hide-toolbar") {
-        #zen-sidebar-top-buttons{
-            min-height: 50px !important;
-            height: 50px !important;
-            max-height: 50px !important;
-        }
+
+    &[zen-sidebar-expanded="true"] #zen-sidebar-top-buttons {
+        min-height: 50px !important;
+        height: 50px !important;
+        max-height: 50px !important;
+    }
+
+    &:not([zen-sidebar-expanded="true"]) #zen-sidebar-top-buttons {
+        min-height: 9px !important;
+        height: 9px !important;
+        max-height: 9px !important;
     }
 }
